objects/Veda_Business_Name__c.object
<CustomObject>
    <fields>
        <fullName>StateOrRegistrationState__c</fullName>
        <label>StateOrRegistrationState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda Business Names</relationshipLabel>
        <relationshipName>Veda_Business_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>business_ABN__c</fullName>
        <label>businessABN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>business_Bureau_Reference__c</fullName>
        <label>businessBureauReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>business_Number__c</fullName>
        <label>businessNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Extract_Date__c</fullName>
        <label>last Extract Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Extract_Time__c</fullName>
        <label>lastExtractTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Update_Date__c</fullName>
        <label>lastUpdateDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Update_Time__c</fullName>
        <label>lastUpdateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_Date__c</fullName>
        <label>startDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Business Name</label>
    <nameField>
        <label>business Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Business Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>